// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EpHomeTile component Renders state 1`] = `
<div class="tile"><a style="outline: none;">
    <div class="innertile">
      <div class="tile-header">
        <h3 class="oph-h3 tileheader"></h3>
      </div>
      <div class="iconline">
        <div class="icon" style="background: white; color: red;">
          <div icon="plus"></div>
        </div>
      </div>
      <div class="tile-content"></div>
    </div>
  </a></div>
`;

exports[`EpHomeTile component Router link 1`] = `
<div class="tile"><a href="https://eperusteet.opintopolku.fi" rel="noopener noreferrer" target="_blank" style="outline: none;">
    <div class="innertile">
      <div class="tile-header">
        <h3 class="oph-h3 tileheader"></h3>
      </div>
      <div class="iconline">
        <div class="icon" style="background: white; color: red;">
          <div icon="plus"></div>
        </div>
      </div>
      <div class="tile-content"></div>
    </div>
  </a></div>
`;
